[project]
name = "urban-heatmap"
version = "0.1.0"
description = "Map temperature variation across city areas to show heat islands."
authors = [
    {name = "afredoherculano",email = "alfredoherculano@proton.me"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
